# ImGuiNotePad

./: CMakeLists.txt
include/: imguiFunctions.h
src/: gui.cpp  gui.h  main.cpp
